--- a/ajax/section.html
+++ b/ajax/section.html
@@ -1,4 +1,4 @@
-<article id='pufka' class="regex-item">
+<article class="regex-item">
 	<header  class="regex-header"><h3></h3></header>
 	<main>
 		<div class="regex-section">
