Testing regular expression functionality added. Console-box messages dislaying added. Reset input values to its defaults when reset button clicked. Scrollbars fixed. Utilities to color the output messages depending on value type added. Parse string expression to regular expression utility function added.

--- a/ajax/section.html
+++ b/ajax/section.html
@@ -5,24 +5,22 @@
 			<p><code class="regex-code" contenteditable spellcheck="false"></code></p>
 		</div>
 		<div class="regex-input">
-			<textarea spellcheck="false"></textarea>
+			<p class="test-text" contenteditable spellcheck="false"></p>
 		</div>
 		<div class="regex-toggle-panel">
-			<div class="regex-tips">
-				<p></p></div>
-			<div class="regex-keywords"><p></p></div>
-			<div class="regex-console"><p></p></div>
+			<p class="regex-tips"></p>
+			<p class="regex-keywords"></p>
+			<article class="regex-console"><div class="inner-console"></div></article>
 		</div>
 	</main>
 
 	<footer>
 		<nav>
-			<span class="regex-button-tips glyphicon glyphicon-align-justify" title="description box"></span>
-			<span class="regex-button-keywords glyphicon glyphicon-search" title="keywords box"></span>
-			<span class="regex-button-console glyphicon glyphicon-exclamation-sign" title="console box"></span>
 			<span class="regex-button-reset glyphicon glyphicon-refresh" title="reset regex pattern"></span>
+			<span class="regex-button-tips glyphicon glyphicon-list-alt" title="description box"></span>
+			<span class="regex-button-keywords glyphicon glyphicon-search" title="keywords box"></span>
 			<!-- test-status-fail/ok    glyphicon-remove/ok-sign-->
-			<span class="test-status-ok glyphicon glyphicon-ok-sign" title="regex test result"></span>
+			<span class="regex-button-console test-status-ok glyphicon glyphicon-check" title="console box"></span>
 		</nav>
 	</footer>
 </article>
