--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						</ul>
 					</nav>
 					<nav id="nav-search">
-						<form action="#">
+						<form>
 							<input type="text" id="searchInp"/>
 							<button id="sumInp" class="glyphicon glyphicon-search"></button>
 						</form>
@@ -59,7 +59,8 @@
 
 			</section>
 			<section id="main-section">
-				<div id="inner-section"></div>
+				<div id="inner-section">
+				</div>
 			</section>
 			
 			<section  id="footSection">
