1. 'id' property added to JSON regex-item objects. 2. CSS refactoring. 3. polyfill.js added to support IE. 4. Detecting #id in URL and loading page with one regex sample matching url#id added. 5. Filtering regex-item by its id property when click items-headers. 6. Filtering and searching regex-items by its keywords when click on search-button, logo-header, navigation-buttons and item-keywords. 7. Prevent regex code to break line (when ENTER key is pressed) added. 8. Line breaking fixed for text samples (prevent creating div and br elements). 9. Switching highlighted text sample on mouse events added. 10. testRegExp() fixed and crossbrowsered. 11. loadData() fixed (set new DOM data for text samples when fired). 12. newRegularText(), newHighlightText(), appendRegularText() and appendHighlightText() added to handle switching text samples nodes. 13. Regex expression validation fixed (catch errors from RegExp constructor and throw in console box). 14. generateId() function created to generate 'id' properties for new JSON regex objects. 15. Reset regex-item fixed. 16. Refreshing title attribute when mouse is over search-input (comfortable for long values).

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+		<script src="js/polyfills.js" defer></script>
 		<script src="js/main.js" defer></script>
 	</head>
 	
@@ -66,7 +67,6 @@
 			<section  id="footSection">
 				<footer></footer>
 			</section>
-			
 		</div>
 	</body>
 </html>
