datalist element added for the search input element with a list of keywords generated from JSON keywords properties of all items

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 					</nav>
 					<nav id="nav-search">
 						<form>
-							<input type="text" id="searchInp"/>
+							<input type="text" id="searchInp" list="keywords" autocomplete="off"/>
+							<datalist id="keywords"></datalist>
 							<button id="sumInp" class="glyphicon glyphicon-search"></button>
 						</form>
 					</nav>					
