Matching < > and & fixed. Matching and inputting \b \f \t \n \v \r \0 fixed. GitHub link added into footer section.

--- a/index.html
+++ b/index.html
@@ -65,8 +65,15 @@
 			</section>
 			
 			<section  id="footSection">
-				<footer></footer>
+				<footer>
+					<nav>
+						<a id="ghub" target="_blank" href="https://github.com/devrafalko/regex-tutorial"></a>
+					</nav>
+				</footer>
 			</section>
 		</div>
 	</body>
 </html>
+
+
+
