Function generateKeywordsCollection() created to dynamically generate keywords according to the structure of regular expression input. The keywords 'modifier', 'bracket', 'metacharacter', 'quantifier' added to the collection of keywords dynamically generated by generateKeywordsCollection() function. The description.json file added with collection of keyword descriptions dinamically added to the description box according to the collection of generated keywords. The keywordsOrder.json file added with the sorted collection of keywords. Function sortKeywords() added to sort dynamically generated keywords according to keywordsOrder.json keywords list. Escaped characters appear when the content box is focused and disappear when the box is blured. Function parseSlashEscaped() implemented to parse escaped characters into \xdd equivalents. Function validateRegex() fixed and shortened. Parsing all data of the next 5 items before its appending, to fasten jquery fadeIn() animations, rather than computing it one after another. HTML Elements property regexData removed and replaced by virtual js objects storing all data. The new span type added to the description box for keywords (able to click and send to the search input). The exec() and test() RegExp.prototype methods added to the console box. Description box styles enhanced. Bootstrap tooltips added for item-footer icons. Function validateJSON() added to validate the data in 'samples.json', 'descriptions.json' and 'keywordsOrder.json' files.

--- a/ajax/section.html
+++ b/ajax/section.html
@@ -16,11 +16,11 @@
 
 	<footer>
 		<nav>
-			<span class="regex-button-reset glyphicon glyphicon-refresh" title="reset regex pattern"></span>
-			<span class="regex-button-tips glyphicon glyphicon-list-alt" title="description box"></span>
-			<span class="regex-button-keywords glyphicon glyphicon-search" title="keywords box"></span>
+			<span class="regex-button-reset glyphicon glyphicon-refresh" data-toggle="tooltip" title="reset regex pattern"></span>
+			<span class="regex-button-tips glyphicon glyphicon-list-alt" data-toggle="tooltip" title="description box"></span>
+			<span class="regex-button-keywords glyphicon glyphicon-search" data-toggle="tooltip" title="keywords box"></span>
 			<!-- test-status-fail/ok    glyphicon-remove/ok-sign-->
-			<span class="regex-button-console test-status-ok glyphicon glyphicon-check" title="console box"></span>
+			<span class="regex-button-console test-status-ok glyphicon glyphicon-check" data-toggle="tooltip" title="console box"></span>
 		</nav>
 	</footer>
 </article>
