--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 		<link rel="icon" type="image/png" href="media/icon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<link rel="stylesheet" href="css/main.css"/>
-		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="libs/jquery-ui.css"/>
+		<script src="libs/jquery-ui.js"></script>
 		
 		<script src="libs/jquery.mCustomScrollbar.concat.min.js"></script>
 		<link rel="stylesheet" href="libs/jquery.mCustomScrollbar.css"/>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 		<script src="js/polyfills.js" defer></script>
 		<script src="js/main.js" defer></script>
+		<link rel="stylesheet" href="css/main.css"/>
 	</head>
 	
 	<body>
