The \f \n \r \t \v \0 buttons added to regex-footer. The methods of ajaxHandle grouped into separated thematic inner objects. The parsing methods of the content box and samples.json content property fixed.

--- a/ajax/section.html
+++ b/ajax/section.html
@@ -27,6 +27,14 @@
 				<!-- test-status-fail/ok    glyphicon-remove/ok-sign-->
 				<li class="regex-button-console test-status-ok glyphicon glyphicon-check" data-toggle="tooltip" title="console box"></li>
 			</ul>
+			<ul class="regexpChars">
+				<li class="reg-char form-feed-char aaa" title="insert form feed">\f</li>
+				<li class="reg-char line-feed-char" title="insert line feed">\n</li>
+				<li class="reg-char carriage-return-char" title="insert carriage return">\r</li>
+				<li class="reg-char horizontal-tab-char" title="insert horizontal tab">\t</li>
+				<li class="reg-char vertical-tab-char" title="insert vertical tab">\v</li>
+				<li class="reg-char null-char" title="insert null char">\0</li>
+			</ul>
 		</nav>
 	</footer>
 </article>
