--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>RegEx Sample Tutorial</title>
+		<title>RegExp Tutorial</title>
 		<link rel="icon" type="image/png" href="media/icon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
